--- a/hosts/alpha/nftables/nftables.conf
+++ b/hosts/alpha/nftables/nftables.conf
@@ -13,8 +13,8 @@ table inet filter {
 
         chain forward {
                 type filter hook forward priority filter; policy drop;
-                iif "enp3s0" oif "br0" ct state established,related accept
-                iif "br0" oif "enp3s0" accept
+                iif "wan" oif "lan" ct state established,related accept
+                iif "lan" oif "wan" accept
         }
 
         chain output {
@@ -28,6 +28,6 @@ table ip nat {
 
         chain postrouting {
                 type nat hook postrouting priority srcnat; policy accept;
-                oif "enp3s0" masquerade
+                oif "wan" masquerade
         }
 }
